--- a/src/components/calendar/style/index.less
+++ b/src/components/calendar/style/index.less
@@ -1,80 +1,90 @@
-@import '../../style/theme/variable.scss';
+@import '../../style/theme/variable.less';
 
-$calendar-prefix-cls: '#{$xbzoom-prefix}-calendar';
+@calendar-prefix-cls: ~'@{xbzoom-prefix}-calendar';
 
-.#{$calendar-prefix-cls} {
+.@{calendar-prefix-cls} {
+  position: relative;
   width: 279px;
+  padding-bottom: 3px;
+  user-select: none;
   background-color: #fff;
   border-radius: 4px;
-  padding-bottom: 3px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-  user-select: none;
-  position: relative;
+
   &--yearSelect {
     position: absolute;
-    z-index: 2;
-    width: 279px;
-    height: calc(100% - 40px);
     top: 40px;
-    background-color: #fff;
-    border-radius: 4px;
+    z-index: 2;
     display: flex;
     flex-wrap: wrap;
+    width: 279px;
+    height: calc(100% - 40px);
     padding: 20px;
+    background-color: #fff;
+    border-radius: 4px;
+
     &--yearTd {
       flex: 0 0 58px;
       height: 24px;
+      margin: 0 10px 36px;
       line-height: 24px;
       text-align: center;
-      margin: 0 10px 36px;
+
       &--yearItem {
-        font-size: 16px;
         display: inline-block;
         height: 24px;
-        text-align: center;
         padding: 0 8px;
+        font-size: 16px;
+        text-align: center;
         cursor: pointer;
+
         &:hover {
           background-color: #d2f1ec;
         }
+
         &--active {
-          border-radius: 2px;
-          background-color: $theme-color;
           color: #fff;
+          background-color: @theme-color;
+          border-radius: 2px;
         }
       }
     }
   }
+
   &--monthSelect {
     position: absolute;
-    z-index: 1;
-    width: 279px;
-    height: calc(100% - 40px);
     top: 40px;
-    background-color: #fff;
-    border-radius: 4px;
+    z-index: 1;
     display: flex;
     flex-wrap: wrap;
+    width: 279px;
+    height: calc(100% - 40px);
     padding: 20px;
+    background-color: #fff;
+    border-radius: 4px;
+
     &--monthTd {
       flex: 0 0 58px;
       height: 24px;
+      margin: 0 10px 36px;
       line-height: 24px;
       text-align: center;
-      margin: 0 10px 36px;
+
       &--monthItem {
         display: inline-block;
         height: 24px;
-        text-align: center;
         padding: 0 8px;
+        text-align: center;
         cursor: pointer;
+
         &:hover {
           background-color: #d2f1ec;
         }
+
         &--active {
-          border-radius: 2px;
-          background-color: $theme-color;
           color: #fff;
+          background-color: @theme-color;
+          border-radius: 2px;
         }
       }
     }
