--- a/src/components/input/style/index.less
+++ b/src/components/input/style/index.less
@@ -1,40 +1,44 @@
-@import '../../style/theme/variable.scss';
-@import '../../spin/style/index.scss';
+@import '../../style/theme/variable.less';
+@import '../../spin/style/index.less';
 
-$input-prefix-cls: '#{$xbzoom-prefix}-input';
+@input-prefix-cls: ~'@{xbzoom-prefix}-input';
 
-.#{$input-prefix-cls} {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-variant: tabular-nums;
-  list-style: none;
-  font-feature-settings: 'tnum';
+.@{input-prefix-cls} {
   position: relative;
+  box-sizing: border-box;
   display: inline-block;
   width: 100%;
   height: 32px;
+  padding: 0;
   padding: 4px 11px;
-  color: rgba(0, 0, 0, 0.65);
+  margin: 0;
+  overflow: visible;
   font-size: 14px;
+  font-variant: tabular-nums;
   line-height: 1.5;
+  color: rgba(0, 0, 0, 0.65);
+  list-style: none;
   background-color: #fff;
   background-image: none;
   border: 1px solid #d9d9d9;
   border-radius: 4px;
   transition: all 0.3s;
-  overflow: visible;
+  font-feature-settings: 'tnum';
+
   &::placeholder {
     color: #bfbfbf;
   }
+
   &:placeholder-shown {
     text-overflow: ellipsis;
   }
+
   &:focus {
-    outline: 0;
     border-color: #42c7ac;
+    outline: 0;
     box-shadow: 0 0 0 2px rgba(32, 186, 160, 0.2);
   }
+
   &:hover {
     border-color: #42c7ac;
   }
