--- a/src/components/spin/style/index.less
+++ b/src/components/spin/style/index.less
@@ -1,27 +1,29 @@
-@import '../../style/theme/variable.scss';
+@import '../../style/theme/variable.less';
 
-$spin-prefix-cls: '#{$xbzoom-prefix}-spin';
+@spin-prefix-cls: ~'@{xbzoom-prefix}-spin';
 
-.#{$spin-prefix-cls} {
+.@{spin-prefix-cls} {
   position: relative;
+
   &--mask {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
     z-index: 999;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
     cursor: progress;
+
     &--loading {
+      font-size: 20px;
+      color: @theme-color;
       animation-name: rotato;
       animation-duration: 1.5s;
-      animation-iteration-count: infinite;
       animation-timing-function: linear;
-      color: $theme-color;
-      font-size: 20px;
+      animation-iteration-count: infinite;
     }
   }
 }
@@ -30,6 +32,7 @@ $spin-prefix-cls: '#{$xbzoom-prefix}-spin';
   form {
     transform: rotate(0);
   }
+
   to {
     transform: rotate(360deg);
   }
