--- a/src/components/zimage/style/index.less
+++ b/src/components/zimage/style/index.less
@@ -1,106 +1,122 @@
-@import '../../style/theme/variable.scss';
-@import '../../spin/style/index.scss';
+@import '../../style/theme/variable.less';
+@import '../../spin/style/index.less';
 
-$zimage-prefix-cls: '#{$xbzoom-prefix}-zimage';
+@zimage-prefix-cls: ~'@{xbzoom-prefix}-zimage';
 
-.#{$zimage-prefix-cls} {
+.@{zimage-prefix-cls} {
   &--img {
     width: 50px;
     height: 50px;
-    border-radius: 3px;
-    cursor: zoom-in;
     margin-right: 5px;
+    cursor: zoom-in;
+    border-radius: 3px;
+
     &--last {
       margin-right: 0;
     }
   }
+
   &--mask {
     position: fixed;
-    background: $mask-color;
-    width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
     z-index: 1000;
-  }
-  &--content {
-    position: fixed;
-    left: 0;
-    top: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    user-select: none;
-    cursor: zoom-out;
+    background: @mask-color;
+  }
+
+  &--content {
+    position: fixed;
+    top: 0;
+    left: 0;
     z-index: 1001;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    cursor: zoom-out;
+    user-select: none;
+
     &--body {
       position: absolute;
       height: 100%;
+      overflow: hidden;
       cursor: zoom-in;
       transition: all 0.2s linear;
-      overflow: hidden;
+
       &--img {
         height: 100%;
       }
+
       &--original--img {
         height: auto;
         cursor: zoom-out;
       }
+
       &--progress {
         position: absolute;
+        bottom: 30px;
+        left: 0;
         width: 100%;
         height: 30px;
         line-height: 30px;
         text-align: center;
-        left: 0;
-        bottom: 30px;
+
         &--yuanxing {
           margin: 0 2px;
           font-size: 14px;
           color: #fff;
-          opacity: 0.3;
           cursor: pointer;
+          opacity: 0.3;
+
           &:hover {
             opacity: 0.6;
           }
+
           &--active {
             opacity: 1;
           }
         }
       }
+
       &--prevBtn {
         display: none;
       }
+
       &--nextBtn {
         display: none;
       }
+
       &:hover {
-        .#{$zimage-prefix-cls}--content--body--prevBtn {
-          display: block;
+        .@{zimage-prefix-cls}--content--body--prevBtn {
           position: absolute;
+          top: 50%;
           left: -5px;
-          top: 50%;
-          color: #fff;
-          font-size: 50px;
-          transform: translateY(-50%);
-          opacity: 0.6;
-          cursor: pointer;
-        }
-        .#{$zimage-prefix-cls}--content--body--nextBtn {
           display: block;
-          position: absolute;
-          right: -5px;
-          top: 50%;
-          color: #fff;
           font-size: 50px;
-          transform: translateY(-50%);
-          opacity: 0.6;
+          color: #fff;
           cursor: pointer;
+          opacity: 0.6;
+          transform: translateY(-50%);
+        }
+
+        .@{zimage-prefix-cls}--content--body--nextBtn {
+          position: absolute;
+          top: 50%;
+          right: -5px;
+          display: block;
+          font-size: 50px;
+          color: #fff;
+          cursor: pointer;
+          opacity: 0.6;
+          transform: translateY(-50%);
         }
       }
     }
+
     &--original {
       overflow: auto;
+
       .xbzoom-zimage--content--body {
         height: auto;
       }
