--- a/src/components/calendar/style/head.less
+++ b/src/components/calendar/style/head.less
@@ -15,7 +15,7 @@
     cursor: pointer;
 
     &:hover {
-      color: @theme-color;
+      color: @primary-color;
     }
   }
 
@@ -25,13 +25,13 @@
     cursor: pointer;
 
     &:hover {
-      color: @theme-color;
+      color: @primary-color;
     }
   }
 
   &--dateInfo {
-    font-size: 14px;
     color: rgba(0, 0, 0, 0.65);
+    font-size: 14px;
 
     &--year {
       margin-right: 5px;
@@ -40,7 +40,7 @@
         cursor: pointer;
 
         &:hover {
-          color: @theme-color;
+          color: @primary-color;
         }
       }
     }
@@ -50,7 +50,7 @@
         cursor: pointer;
 
         &:hover {
-          color: @theme-color;
+          color: @primary-color;
         }
       }
     }
@@ -62,7 +62,7 @@
     cursor: pointer;
 
     &:hover {
-      color: @theme-color;
+      color: @primary-color;
     }
   }
 
@@ -71,7 +71,7 @@
     cursor: pointer;
 
     &:hover {
-      color: @theme-color;
+      color: @primary-color;
     }
   }
 }
