--- a/src/components/calendar/style/index.less
+++ b/src/components/calendar/style/index.less
@@ -6,10 +6,10 @@
   position: relative;
   width: 279px;
   padding-bottom: 3px;
-  user-select: none;
   background-color: #fff;
   border-radius: 4px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+  user-select: none;
 
   &--yearSelect {
     position: absolute;
@@ -44,7 +44,7 @@
 
         &--active {
           color: #fff;
-          background-color: @theme-color;
+          background-color: @primary-color;
           border-radius: 2px;
         }
       }
@@ -83,7 +83,7 @@
 
         &--active {
           color: #fff;
-          background-color: @theme-color;
+          background-color: @primary-color;
           border-radius: 2px;
         }
       }
