--- a/src/components/style/theme/variable.less
+++ b/src/components/style/theme/variable.less
@@ -1,7 +1,7 @@
 @xbzoom-prefix: xbzoom;
 
 /** 主题色 */
-@theme-color: #22baa0;
+@primary-color: #22baa0;
 
 /** 遮罩层颜色 */
 @mask-color: rgba(0, 0, 0, 0.65);
