--- a/src/components/calendar/style/head.less
+++ b/src/components/calendar/style/head.less
@@ -1,4 +1,4 @@
-@import '../../style/theme/variable.less';
+@import '../../style/themes/default.less';
 
 @calendarHeader-prefix-cls: ~'@{xbzoom-prefix}-calendar-header';
 
