--- a/src/components/calendar/style/footer.less
+++ b/src/components/calendar/style/footer.less
@@ -1,3 +1,3 @@
-@import '../../style/theme/variable.less';
+@import '../../style/themes/default.less';
 
 @calendarFooter-prefix-cls: ~'@{xbzoom-prefix}-calendar-footer';
