--- a/src/components/rich-editor/style/index.less
+++ b/src/components/rich-editor/style/index.less
@@ -1,4 +1,4 @@
-@import '../../style/theme/variable.less';
+@import '../../style/themes/default.less';
 @import '../../spin/style/index.less';
 @import './editor.less';
 @import './color-picker.less';
