--- a/src/components/style/index.less
+++ b/src/components/style/index.less
@@ -1,3 +1,3 @@
-@import './theme/variable.less';
-@import './theme/common.less';
-@import './theme/iconfont.less';
+@import './themes/default.less';
+@import './themes/common.less';
+@import './themes/iconfont.less';
