--- a/src/components/zimage/style/index.less
+++ b/src/components/zimage/style/index.less
@@ -1,4 +1,4 @@
-@import '../../style/theme/variable.less';
+@import '../../style/themes/default.less';
 
 @zimage-prefix-cls: ~'@{xbzoom-prefix}-zimage';
 
@@ -22,7 +22,7 @@
     z-index: 1000;
     width: 100%;
     height: 100%;
-    background: @mask-color;
+    background: @modal-mask-bg;
   }
 
   &--content {
