--- a/src/components/zimage/style/index.less
+++ b/src/components/zimage/style/index.less
@@ -38,18 +38,17 @@
 
     &--body {
       position: absolute;
+      width: 100%;
       height: 100%;
+      padding: 0 40px;
       overflow: hidden;
       cursor: zoom-in;
       transition: all 0.2s linear;
 
       &--img {
+        width: 100%;
         height: 100%;
-      }
-
-      &--original--img {
-        height: auto;
-        cursor: zoom-out;
+        object-fit: contain;
       }
 
       &--progress {
@@ -116,8 +115,13 @@
     &--original {
       overflow: auto;
 
-      .xbzoom-zimage--content--body {
+      &--body {
         height: auto;
+        cursor: zoom-out;
+        &--img {
+          height: auto;
+          cursor: zoom-out;
+        }
       }
     }
   }
